# Mini-Blockchain-CPP

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  README.md  main.cpp
include/: Block.h  Blockchain.h  Transaction.h  Wallet.h
include/utils/: Hashing.h  MerkleTree.h  Timestamp.h
src/: Block.cpp  Blockchain.cpp  Transaction.cpp  Wallet.cpp  main.cpp
src/utils/: Hashing.cpp  MerkelTree.cpp  Timestamp.cpp
